--- a/index.html
+++ b/index.html
@@ -1,219 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dhanya Kumar K.N | AI/ML Developer</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dhanya kumar K.N | AI/ML Enthusiast & Developer</title>
 
-<meta name="description" content="AI/ML Enthusiast portfolio showcasing machine learning projects and development skills.">
-<meta name="author" content="Dhanya Kumar K.N">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <meta name="description" content="AI/ML Enthusiast and Developer portfolio showcasing projects in machine learning, front-end development, and cloud technologies.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 
-/* ================= GLOBAL ================= */
+/* ================= DEVICE SAFE BASE ================= */
 
-:root{
-  --primary:#6c63ff;
-  --dark:#1f1f2e;
-  --light:#f4f4f9;
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-  font-family:'Poppins',sans-serif;
-  background:var(--light);
-  color:#333;
-  scroll-behavior:smooth;
+/* ================= YOUR ORIGINAL CSS ================= */
+
+:root {
+  --primary-color: #6c63ff;
+  --secondary-color: #4d44db;
+  --dark-color: #2a2a72;
+  --light-color: #f8f9fa;
+  --accent-color: #ff6584;
+  --text-dark: #333;
+  --text-light: #f8f9fa;
+  --transition: all 0.3s ease;
+  --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --box-shadow-hover: 0 8px 25px rgba(0, 0, 0, 0.2);
 }
 
-section{
-  padding:100px 8%;
+body {
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.6;
+  color: var(--text-dark);
+  background-color: var(--light-color);
 }
 
-h1,h2,h3{
-  margin-bottom:1rem;
+h1, h2, h3, h4 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  margin-bottom: 1rem;
 }
 
-h2{
-  text-align:center;
-  color:var(--primary);
-  margin-bottom:2rem;
+a { text-decoration: none; color: inherit; }
+ul { list-style: none; }
+
+/* HEADER */
+header {
+  position: fixed;
+  width: 100%;
+  background: rgba(255,255,255,0.95);
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  z-index: 1000;
 }
 
-/* ================= NAVIGATION ================= */
-
-header{
-  position:fixed;
-  width:100%;
-  top:0;
-  background:#fff;
-  box-shadow:0 2px 10px rgba(0,0,0,0.1);
-  z-index:1000;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 5%;
 }
 
-nav{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:1rem 8%;
+.nav-menu {
+  display: flex;
+  gap: 2rem;
 }
 
-.logo{
-  font-weight:700;
-  font-size:1.2rem;
-  color:var(--primary);
+.nav-menu a:hover { color: var(--primary-color); }
+
+/* SECTIONS */
+section {
+  padding: 6rem 5%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
-.nav-links{
-  display:flex;
-  gap:2rem;
-  list-style:none;
+section h2 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  color: var(--dark-color);
 }
 
-.nav-links a{
-  text-decoration:none;
-  color:#333;
-  font-weight:500;
-  transition:0.3s;
+/* HOME */
+#home {
+  background: linear-gradient(135deg, var(--dark-color), #3a3a8a);
+  color: white;
 }
 
-.nav-links a:hover{
-  color:var(--primary);
+.home-content h1 {
+  font-size: 3rem;
 }
 
-.menu-btn{
-  display:none;
-  font-size:1.5rem;
-  cursor:pointer;
+.home-content p {
+  margin: 1rem auto 2rem;
+  max-width: 700px;
 }
 
-/* ================= HERO ================= */
-
-#home{
-  min-height:100vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  background:linear-gradient(135deg,var(--dark),#34345e);
-  color:#fff;
+/* PROJECT GRID */
+.upcoming-projects-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
 }
 
-#home h1{
-  font-size:3rem;
+.upcoming-project-card {
+  background: #f8f9fa;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: var(--box-shadow);
 }
 
-#home p{
-  max-width:600px;
-  margin:1rem 0 2rem;
+.upcoming-project-card h3 {
+  color: var(--primary-color);
 }
 
-.btn{
-  display:inline-block;
-  padding:0.8rem 2rem;
-  background:var(--primary);
-  color:#fff;
-  text-decoration:none;
-  border-radius:30px;
-  transition:0.3s;
+/* SKILLS */
+.skill {
+  max-width: 600px;
+  margin: 1rem auto;
+  text-align: left;
 }
 
-.btn:hover{
-  transform:translateY(-3px);
+progress {
+  width: 100%;
+  height: 10px;
 }
 
-/* ================= PROJECTS ================= */
-
-.projects-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:2rem;
+/* CONTACT */
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
 }
 
-.project-card{
-  background:#fff;
-  padding:1.5rem;
-  border-radius:10px;
-  box-shadow:0 5px 15px rgba(0,0,0,0.1);
-  transition:0.3s;
+.social-icon {
+  font-size: 1.5rem;
 }
 
-.project-card:hover{
-  transform:translateY(-5px);
-}
+/* RESPONSIVE FIX */
+@media (max-width: 768px) {
 
-.project-card h3{
-  color:var(--primary);
-}
-
-/* ================= SKILLS ================= */
-
-.skill{
-  max-width:500px;
-  margin:1rem auto;
-}
-
-progress{
-  width:100%;
-  height:8px;
-}
-
-/* ================= CONTACT ================= */
-
-#contact{
-  text-align:center;
-  background:#fff;
-}
-
-footer{
-  text-align:center;
-  padding:1rem;
-  background:#111;
-  color:#fff;
-}
-
-/* ================= RESPONSIVE ================= */
-
-@media(max-width:768px){
-
-  nav{
-    padding:1rem 5%;
+  section {
+    padding: 5rem 4%;
+    min-height: auto;
   }
 
-  .menu-btn{
-    display:block;
+  .nav-menu {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
   }
 
-  .nav-links{
-    position:absolute;
-    top:60px;
-    right:0;
-    background:#fff;
-    width:220px;
-    flex-direction:column;
-    padding:1rem;
-    display:none;
-    box-shadow:0 5px 15px rgba(0,0,0,0.1);
+  .home-content h1 {
+    font-size: 2.2rem;
   }
 
-  .nav-links.active{
-    display:flex;
+  section h2 {
+    font-size: 2rem;
   }
 
-  #home h1{
-    font-size:2.2rem;
+  .social-icons {
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  section {
+    padding: 4rem 1.5rem;
   }
 
-  section{
-    padding:80px 5%;
+  .home-content h1 {
+    font-size: 1.8rem;
+  }
+
+  section h2 {
+    font-size: 1.6rem;
   }
 }
 
@@ -225,61 +200,34 @@ footer{
 <header>
   <nav>
     <div class="logo">Dhanya Kumar</div>
-    <div class="menu-btn" onclick="toggleMenu()">☰</div>
-    <ul class="nav-links" id="navLinks">
+    <ul class="nav-menu">
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
       <li><a href="#skills">Skills</a></li>
+      <li><a href="#upcoming-projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 </header>
 
 <section id="home">
-  <h1>Dhanya Kumar K.N</h1>
-  <p>BCA Student & AI/ML Enthusiast passionate about building intelligent systems and web applications.</p>
-  <a href="#contact" class="btn">Contact Me</a>
+  <div class="home-content">
+    <h1>Dhanya Kumar K.N</h1>
+    <p>BCA Student & AI/ML Enthusiast passionate about creating intelligent solutions.</p>
+  </div>
 </section>
 
 <section id="about">
   <h2>About Me</h2>
-  <p style="text-align:center; max-width:700px; margin:auto;">
-    I am an aspiring AI/ML developer focused on Machine Learning, Data Science,
-    and intelligent application development. I enjoy solving real-world problems
-    using technology.
-  </p>
-</section>
-
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="projects-grid">
-    <div class="project-card">
-      <h3>Student Performance Predictor</h3>
-      <p>Regression-based ML model built using Python and Scikit-learn.</p>
-    </div>
-    <div class="project-card">
-      <h3>Image Classification App</h3>
-      <p>Deep learning model using TensorFlow for image recognition.</p>
-    </div>
-    <div class="project-card">
-      <h3>Portfolio Website</h3>
-      <p>Responsive personal portfolio using HTML, CSS and JavaScript.</p>
-    </div>
-  </div>
+  <p>I am an AI/ML enthusiast focused on machine learning, neural networks and intelligent systems development.</p>
 </section>
 
 <section id="skills">
   <h2>Skills</h2>
 
   <div class="skill">
-    <label>Python</label>
+    <label>C Programming</label>
     <progress value="85" max="100"></progress>
-  </div>
-
-  <div class="skill">
-    <label>Machine Learning</label>
-    <progress value="80" max="100"></progress>
   </div>
 
   <div class="skill">
@@ -289,28 +237,40 @@ footer{
 
   <div class="skill">
     <label>Java</label>
-    <progress value="75" max="100"></progress>
+    <progress value="80" max="100"></progress>
+  </div>
+
+</section>
+
+<section id="upcoming-projects">
+  <h2>Projects</h2>
+
+  <div class="upcoming-projects-container">
+    <div class="upcoming-project-card">
+      <h3>E-commerce Recommendation System</h3>
+      <p>AI-powered product recommendation engine.</p>
+    </div>
+
+    <div class="upcoming-project-card">
+      <h3>Image Classification Web App</h3>
+      <p>Deep learning based image classifier.</p>
+    </div>
+
+    <div class="upcoming-project-card">
+      <h3>Chatbot with NLP</h3>
+      <p>Transformer-based conversational AI chatbot.</p>
+    </div>
   </div>
 </section>
 
 <section id="contact">
-  <h2>Contact</h2>
-  <p>Email: yourmail@example.com</p>
-  <p>GitHub: github.com/yourusername</p>
-  <p>LinkedIn: linkedin.com/in/yourprofile</p>
+  <h2>Let's Connect</h2>
+  <div class="social-icons">
+    <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+    <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+    <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a>
+  </div>
 </section>
-
-<footer>
-  © <span id="year"></span> Dhanya Kumar K.N
-</footer>
-
-<script>
-function toggleMenu(){
-  document.getElementById("navLinks").classList.toggle("active");
-}
-
-document.getElementById("year").textContent = new Date().getFullYear();
-</script>
 
 </body>
 </html>
