--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      width: 100%;
+      max-width: 100%;
     }
 
     section h2 {
@@ -177,6 +179,7 @@
       font-size: 3.5rem;
       margin-bottom: 1.5rem;
       line-height: 1.2;
+      word-break: break-word;
     }
 
     .home-content p {
@@ -281,6 +284,7 @@
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
       margin-top: 2rem;
+      width: 100%;
     }
 
     .upcoming-project-card {
@@ -331,6 +335,8 @@
     .social-icons {
       display: flex;
       gap: 2rem;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     .social-icon {
@@ -372,23 +378,36 @@
     }
 
     /* Responsive Design */
+    @media (max-width: 992px) {
+      nav {
+        padding: 1rem 4%;
+      }
+    }
+
     @media (max-width: 768px) {
       nav {
         flex-direction: column;
-        padding: 1rem;
+        align-items: center;
       }
 
       .nav-menu {
+        flex-wrap: wrap;
+        justify-content: center;
         margin-top: 1rem;
         gap: 1rem;
       }
 
       section {
         padding: 4rem 2rem;
+        min-height: auto;
+      }
+
+      .home-content {
+        padding: 1rem;
       }
 
       .home-content h1 {
-        font-size: 2.5rem;
+        font-size: 2.3rem;
       }
 
       .home-content p {
@@ -398,9 +417,19 @@
       section h2 {
         font-size: 2rem;
       }
+    }
 
-      .projects-container {
-        grid-template-columns: 1fr;
+    @media (max-width: 480px) {
+      section {
+        padding: 3.5rem 1.5rem;
+      }
+
+      .home-content h1 {
+        font-size: 1.9rem;
+      }
+
+      section h2 {
+        font-size: 1.8rem;
       }
     }
 
@@ -475,7 +504,7 @@
       <p>Continuously enhancing my skills through online courses in Deep Learning, Neural Networks, and Data Science from platforms like Coursera and Udemy.</p>
     </section>
 
-       <section id="skills" class="section-animate">
+    <section id="skills" class="section-animate">
       <h2>Skills</h2>
       <div class="skills-container">
         <div class="skill">
@@ -536,69 +565,5 @@
   <script>
     // Progress Bar
     window.addEventListener('scroll', function() {
-      const scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
-      const scrollHeight = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-      const scrollProgress = (scrollTop / scrollHeight) * 100;
-      document.getElementById('progress-bar').style.width = scrollProgress + '%';
-    });
+      const scrollTop = document.documentElement.scrollTop
 
-    // Particles.js Configuration
-    document.addEventListener('DOMContentLoaded', function() {
-      particlesJS('particles-js', {
-        particles: {
-          number: { value: 80, density: { enable: true, value_area: 800 } },
-          color: { value: "#ffffff" },
-          shape: { type: "circle" },
-          opacity: { value: 0.5, random: true },
-          size: { value: 3, random: true },
-          line_linked: { enable: true, distance: 150, color: "#ffffff", opacity: 0.4, width: 1 },
-          move: { enable: true, speed: 2, direction: "none", random: true, straight: false, out_mode: "out" }
-        },
-        interactivity: {
-          detect_on: "canvas",
-          events: {
-            onhover: { enable: true, mode: "repulse" },
-            onclick: { enable: true, mode: "push" }
-          }
-        }
-      });
-
-      // Scroll Animation
-      const sections = document.querySelectorAll('.section-animate');
-      const observerOptions = {
-        threshold: 0.1
-      };
-
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('show');
-          }
-        });
-      }, observerOptions);
-
-      sections.forEach(section => {
-        observer.observe(section);
-      });
-
-      // Smooth Scrolling
-      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function(e) {
-          e.preventDefault();
-          document.querySelector(this.getAttribute('href')).scrollIntoView({
-            behavior: 'smooth'
-          });
-        });
-      });
-    });
-
-    // Dynamic Year Update
-    document.addEventListener('DOMContentLoaded', function() {
-      const yearSpan = document.getElementById('current-year');
-      if (yearSpan) {
-        yearSpan.textContent = new Date().getFullYear();
-      }
-    });
-  </script>
-</body>
-</html>
